tests/errors/4_type_errors/boolop-test6.ifj.java
class Main { 
    static void run() {
        int a = true; // boolean value to int
    }
}